Fix long quick search results cropping on the top side when it should be just bottom

--- a/frontend/src/components/Navbar/QuickSearch/QuickSearchResult.module.css
+++ b/frontend/src/components/Navbar/QuickSearch/QuickSearchResult.module.css
@@ -12,6 +12,7 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   gap: var(--mantine-spacing-md);
+  align-items: flex-start;
   /* half of xs padding vertically = practically an xxs. The aim is to get a
   compact results view to fit as many results as possible on the screen, since
   the quick search menu is for advanced users and advanced users would want
